--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rasoulmadani.github.io/tutorial/",
+  "homepage": "http://rasoulmadani.github.io/fast-food-catalogue-with-reactjs/",
   "name": "fast-food-catalogue",
   "private": true,
   "version": "0.0.0",
